fix: correct z-order on mobile
Closes #68

--- a/src/main/resources/static/soli.css
+++ b/src/main/resources/static/soli.css
@@ -79,6 +79,11 @@
     }
 }
 
+/* Show the drawer above the calendar */
+.drawer-side {
+    z-index: 20;
+}
+
 /* Make the now-indicator more visible */
 .fc-timegrid-now-indicator-line {
     border-width: 2px !important;
